...

    private var estimatedProgressObservation: NSKeyValueObservation?

    override func viewDidLoad() {
        super.viewDidLoad()
        view.backgroundColor = .white
        webView.accessibilityIdentifier = "UnsplashWebView"

        setupWebView()
        setupBackButton()
        setupProgressView()

        webView.navigationDelegate = self
...
    }

    private func setupBackButton() {
        backButton.setImage(UIImage(named: "nav_back_button"), for: .normal)
        backButton.tintColor = UIColor(named: "YP Black")
        backButton.addTarget(self, action: #selector(didTapBackButton), for: .touchUpInside)
        backButton.accessibilityIdentifier = "BackButton"
        backButton.translatesAutoresizingMaskIntoConstraints = false
        view.addSubview(backButton)
        NSLayoutConstraint.activate([
            backButton.leadingAnchor.constraint(equalTo: view.safeAreaLayoutGuide.leadingAnchor, constant: Layout.backButtonInset),
            backButton.topAnchor.constraint(equalTo: view.safeAreaLayoutGuide.topAnchor, constant: Layout.backButtonInset),
            backButton.widthAnchor.constraint(equalToConstant: Layout.backButtonSize),
...
